<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="@color/colorFondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorCabecera"
            tools:ignore="MissingConstraints">
                <TextView
                        android:id="@+id/textview1"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:textColor="@color/colorTextoCabecera"
                        android:text="@string/cabeceraMenu"
                    android:textSize="25dp">
                </TextView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

                <ImageView
                    android:layout_width="294dp"
                    android:layout_height="300dp"
                    app:srcCompat="@drawable/hamburguesa"
                    android:layout_marginTop="94dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="60dp"
                    android:layout_marginLeft="16dp"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/menuHamburguesas"
                    android:layout_width="294dp"
                    android:layout_height="100dp"
                    android:background="@color/colorBoton"
                    android:text="@string/sandwichMenu"
                    android:textColor="@color/colorLetraBoton"
                    android:layout_marginTop="400dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="60dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="20dp"
                    tools:ignore="MissingConstraints" />


                <Button
                    android:id="@+id/menuNosotros"
                    android:layout_width="294dp"
                    android:layout_height="100dp"
                    android:background="@color/colorBoton"
                    android:text="@string/nosotrosBoton"
                    android:textColor="@color/colorLetraBoton"
                    tools:layout_editor_absoluteX="44dp"
                    tools:layout_editor_absoluteY="28dp"
                    android:layout_marginTop="540dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="60dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="20dp"
                    tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>