<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainSecondary"
    android:orientation="vertical"
    android:background="@color/colorFondo"
    >
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCabecera"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/nosotrosMenu"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:background="@color/colorCabecera"
                android:textColor="@color/colorLetraBoton"
                android:text="@string/volver" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="80dp"
                android:textColor="@color/colorLetraBoton"
                android:text="@string/cabeceraMenu"
                android:gravity="center"
                android:textSize="20dp">
            </TextView>
        </RelativeLayout>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        >
    <Button
        android:id="@+id/hamburguesa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBoton"
        android:textColor="@color/colorLetraBoton"
        android:text="@string/hamburguesa1"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <Button
            android:id="@+id/hamburguesa2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBoton"
            android:textColor="@color/colorLetraBoton"
            android:text="@string/hamburguesa1"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <Button
            android:id="@+id/hamburguesa3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBoton"
            android:textColor="@color/colorLetraBoton"
            android:text="@string/hamburguesa1"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <Button
            android:id="@+id/hamburguesa4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBoton"
            android:textColor="@color/colorLetraBoton"
            android:text="@string/hamburguesa1"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <Button
            android:id="@+id/hamburguesa5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBoton"
            android:textColor="@color/colorLetraBoton"
            android:text="@string/hamburguesa1"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <Button
            android:id="@+id/hamburguesa6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBoton"
            android:textColor="@color/colorLetraBoton"
            android:text="@string/hamburguesa1"
            />
    </RelativeLayout>



</LinearLayout>